--- a/Tharga.Wpf/Tharga.Wpf.csproj
+++ b/Tharga.Wpf/Tharga.Wpf.csproj
@@ -28,13 +28,13 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Clowd.Squirrel" Version="2.11.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Fluent.Ribbon" Version="10.0.4" />
-		<PackageReference Include="Prism.Unity" Version="8.1.97" />
-		<PackageReference Include="Prism.Microsoft.DependencyInjection.Extensions" Version="8.0.62" />
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 		<PackageReference Include="Quilt4Net.Logger" Version="3.2.9" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<InternalsVisibleTo Include="Tharga.Wpf.Tests" />
