start on tab navigation

--- a/Tharga.Wpf/Tharga.Wpf.csproj
+++ b/Tharga.Wpf/Tharga.Wpf.csproj
@@ -46,4 +46,7 @@
 	  <Resource Include="Images\Application\blue.png" />
 	  <Resource Include="Images\Application\green.png" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Features\TabNavigator\" />
+	</ItemGroup>
 </Project>
