--- a/Tharga.Wpf.Sample/Tharga.Wpf.Sample.csproj
+++ b/Tharga.Wpf.Sample/Tharga.Wpf.Sample.csproj
@@ -8,7 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Close.svg" />
+    <None Remove="Exit.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Exit.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tharga.Wpf\Tharga.Wpf.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Close.svg" />
   </ItemGroup>
 
 </Project>
