--- a/Tharga.Wpf/Tharga.Wpf.csproj
+++ b/Tharga.Wpf/Tharga.Wpf.csproj
@@ -48,6 +48,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Clowd.Squirrel" Version="2.11.1" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="Tharga.Toolkit" Version="1.11.5" />
 	</ItemGroup>
 	<ItemGroup>
 		<InternalsVisibleTo Include="Tharga.Wpf.Tests" />
