--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,8 +66,7 @@ stages:
 - stage: Release
   displayName: Release
   dependsOn: Build
-  condition: |
-    and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
   jobs:
   - job: Release
     displayName: Release
