--- a/Tharga.Wpf.Sample/Tharga.Wpf.Sample.csproj
+++ b/Tharga.Wpf.Sample/Tharga.Wpf.Sample.csproj
@@ -20,6 +20,7 @@
 	<ItemGroup>
 		<PackageReference Include="Fluent.Ribbon" Version="10.1.0" />
 		<PackageReference Include="SharpVectors" Version="1.8.4.2" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
