--- a/Tharga.Wpf/Tharga.Wpf.csproj
+++ b/Tharga.Wpf/Tharga.Wpf.csproj
@@ -55,6 +55,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.7" />
     <PackageReference Include="System.Text.Json" Version="9.0.7" />
     <PackageReference Include="Tharga.Toolkit" Version="1.13.12" />
+    <PackageReference Include="Velopack" Version="0.0.1298" />
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="Tharga.Wpf.Tests" />
