--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 trigger:
 - master
 
-name: 1.2.$(Rev:r)
+name: 1.3.$(Rev:r)
 
 pool:
   vmImage: 'windows-latest'
@@ -9,6 +9,7 @@ pool:
 variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  BQC.ForceNewBaseline: false
 
 stages:
 - stage: Build
@@ -30,15 +31,15 @@ stages:
       displayName: 'Restore nuget packages'
       inputs:
         command: 'restore'
-        projects: '**/Tharga.Wpf*.csproj'
+        projects: '**/Tharga.*.csproj'
         feedsToUse: 'select'
 
     - task: DotNetCoreCLI@2
       displayName: 'Build'
       inputs:
         command: 'build'
-        projects: '**/Tharga.Wpf*.csproj'
-        arguments: '-c Release --no-restore /p:Version=$(Build.BuildNumber) /p:NoWarn=0618'
+        projects: '**/Tharga.*.csproj'
+        arguments: '-c Release --no-restore /p:Version=$(Build.BuildNumber)'
         versioningScheme: 'byEnvVar'
         versionEnvVar: 'messagesPackageVersion'
 
@@ -49,13 +50,12 @@ stages:
         packagesToPack: '**/Tharga.Wpf.csproj'
         versioningScheme: 'byBuildNumber'
 
-    # - task: DotNetCoreCLI@2
-    #   displayName: 'Push nuget packages locally'
-    #   inputs:
-    #     command: 'push'
-    #     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-    #     nuGetFeedType: 'internal'
-    #     publishVstsFeed: 'df4b267e-c55c-4a36-8fe3-8e98d5d8dbbb/5cea672d-cb79-44f6-beb8-2eaba59e670d'
+    - task: DotNetCoreCLI@2
+      displayName: 'Pack Tharga.License'
+      inputs:
+        command: 'pack'
+        packagesToPack: '**/Tharga.License.csproj'
+        versioningScheme: 'byBuildNumber'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish artifacts'
@@ -68,6 +68,7 @@ stages:
   dependsOn: Build
   condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
   jobs:
+
   - job: Release
     displayName: Release
 
@@ -77,11 +78,16 @@ stages:
     - checkout: self
       persistCredentials: true
 
+    - script: |
+        echo "Files in workspace:"
+        dir "$(Pipeline.Workspace)/drop" /s /b
+      displayName: 'List pipeline workspace drop files'
+
     - task: NuGetCommand@2
       displayName: 'Push nuget packages to nuget.org'
       inputs:
         command: 'push'
-        packagesToPush: '$(Pipeline.Workspace)/**/*.nupkg;!$(Pipeline.Workspace)/**/*.symbols.nupkg'
+        packagesToPush: '$(Pipeline.Workspace)/**/*.symbols.nupkg'
         nuGetFeedType: 'external'
         publishFeedCredentials: 'Nuget.org'
 
