add version to assembly

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
         command: 'build'
         projects: '**/Tharga.*.csproj'
         arguments: '-c Release --no-restore /p:Version=$(Build.BuildNumber)'
-        versioningScheme: 'byEnvVar'
+        versioningScheme: 'byBuildNumber'
         versionEnvVar: 'messagesPackageVersion'
 
     - task: DotNetCoreCLI@2
