--- a/Tharga.License/Tharga.License.csproj
+++ b/Tharga.License/Tharga.License.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0;net10.0;</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Version>1.0.0</Version>
     <Authors>Daniel Bohlin</Authors>
